tests/data/envoy/envoy.yaml
static_resources:
  clusters:
    - name: als
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      protocol_selection: USE_CONFIGURED_PROTOCOL
      http2_protocol_options: {}
      circuit_breakers:
          thresholds:
          - max_connections: 1
            max_connection_pools: 1
      load_assignment:
        cluster_name: als
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: runner
                      port_value: 9999
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress
                access_log:
                  - name: envoy.access_loggers.http_grpc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
                      common_config:
                        log_name: envoy-al
                        grpc_service:
                          envoy_grpc:
                            cluster_name: als
                        transport_api_version: V3
                        buffer_flush_interval: 0.1s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: route
                  virtual_hosts:
                    - name: local-reply
                      domains:
                        - "*"
                      routes:
                      - directResponse:
                          status: 200
                        match:
                          prefix: /
                        name: local-reply
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: route
                  virtual_hosts:
                    - name: healthz
                      domains:
                        - "*"
                      routes:
                      - directResponse:
                          status: 200
                        match:
                          prefix: /healthz
                        name: healthz
